--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/qnU58Crrczw?autoplay=1&mute=1&loop=1&playlist=qnU58Crrczw"
-            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+          <iframe src="https://www.youtube.com/embed/e1OkcOgHY4M?autoplay=1&mute=1&loop=1" frameborder="0"
+            allow="autoplay; encrypted-media" allowfullscreen>
           </iframe>
         </div>
         <h2 class="subtitle has-text-centered">
