Update author list

--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://ankile.com" target="_blank">Lars Ankile</a><sup>1,2,3</sup>,</span>
+                <a href="https://ankile.com" target="_blank">Lars Ankile</a>,</span>
               <span class="author-block">
-                <a href="https://anthonysimeonov.github.io/" target="_blank">Anthony Simeonov</a><sup>1,2</sup>,</span>
+                <a href="https://zhenyujiang.me/" target="_blank">Zhenyu Jiang</a>,</span>
               <span class="author-block">
-                <a href="https://idanshen.github.io/" target="_blank">Idan Shenfeld</a><sup>1,2</sup>,
-              </span>
+                <a href="https://rockyduan.com/" target="_blank">Rocky Duan</a>,</span>
               <span class="author-block">
-                <a href="https://marceltorne.github.io/" target="_blank">Marcel Torne</a><sup>1,2</sup>,
-              </span>
+                <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a>,</span>
               <span class="author-block">
-                <a href="https://people.csail.mit.edu/pulkitag/" target="_blank">Pulkit Agrawal</a><sup>1,2</sup>,
-              </span>
+                <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter Abbeel</a>,</span>
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=DkUUhXEAAAAJ&hl=en" target="_blank">Anusha
+                  Nagabandi</a></span>
             </div>
 
             <div class="is-size-5 publication-authors">
@@ -865,7 +865,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@misc{ankile2026residualoffpolicy,
         title={Residual Off-Policy RL for Finetuning Behavior Cloning Policies}, 
-        author={Lars Ankile and Anthony Simeonov and Idan Shenfeld and Marcel Torne and Pulkit Agrawal},
+        author={Lars Ankile and Zhenyu Jiang and Rocky Duan and Guanya Shi and Pieter Abbeel and Anusha Nagabandi},
         year={2026},
         booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
         primaryClass={cs.RO},
