--- a/index.html
+++ b/index.html
@@ -79,22 +79,26 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://ankile.com" target="_blank">Lars Ankile</a>,</span>
+                <a href="https://ankile.com" target="_blank">Lars Ankile</a><sup>1,2</sup>,</span>
               <span class="author-block">
-                <a href="https://zhenyujiang.me/" target="_blank">Zhenyu Jiang</a>,</span>
+                <a href="https://zhenyujiang.me/" target="_blank">Zhenyu Jiang</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="http://rockyduan.com/" target="_blank">Rocky Duan</a>,</span>
+                <a href="http://rockyduan.com/" target="_blank">Rocky Duan</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a>,</span>
+                <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a><sup>1,3</sup>,</span>
               <span class="author-block">
-                <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter Abbeel</a>,</span>
+                <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter
+                  Abbeel</a><sup>1,4</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=DkUUhXEAAAAJ&hl=en" target="_blank">Anusha
-                  Nagabandi</a></span>
+                  Nagabandi</a><sup>1</sup></span>
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Frontier AI in Robotics Lab, Amazon</span>
+              <span class="author-block"><sup>1</sup>Amazon FAR</span>
+              <span class="author-block"><sup>2</sup>Stanford University</span>
+              <span class="author-block"><sup>3</sup>Carnegie Mellon University</span>
+              <span class="author-block"><sup>4</sup>UC Berkeley</span>
             </div>
 
             <div class="image-container">
