--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://ankile.com" target="_blank">Lars Ankile</a><sup>1,2,*</sup>,</span>
+                <a href="https://ankile.com" target="_blank">Lars Ankile</a><sup>*1,2</sup>,</span>
               <span class="author-block">
                 <a href="https://zhenyujiang.me/" target="_blank">Zhenyu Jiang</a><sup>1</sup>,</span>
               <span class="author-block">
                 <a href="http://rockyduan.com/" target="_blank">Rocky Duan</a><sup>1</sup>,</span>
               <span class="author-block">
-                <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a><sup>1,3,†</sup>,</span>
+                <a href="https://www.gshi.me/" target="_blank">Guanya Shi</a><sup>†1,3</sup>,</span>
               <span class="author-block">
                 <a href="https://people.eecs.berkeley.edu/~pabbeel/" target="_blank">Pieter
-                  Abbeel</a><sup>1,4,†</sup>,</span>
+                  Abbeel</a><sup>†1,4</sup>,</span>
               <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=DkUUhXEAAAAJ&hl=en" target="_blank">Anusha
                   Nagabandi</a><sup>1</sup></span>
@@ -218,17 +218,6 @@
       </div>
       <!--/ Abstract. -->
 
-      <!-- Paper video. -->
-      <!-- <div class="columns is-centered has-text-centered">
-        <div class="column is-four-fifths">
-          <h2 class="title is-3">Video</h2>
-          <div class="publication-video">
-            <iframe src="https://www.youtube.com/watch?v=AsasJJ2jlw8" frameborder="0" allow="autoplay; encrypted-media"
-              allowfullscreen></iframe>
-          </div>
-        </div>
-      </div> -->
-      <!--/ Paper video. -->
     </div>
   </section>
 
@@ -312,7 +301,8 @@
       <div class="columns is-centered">
         <div class="column is-full-width">
           <div class="content has-text-justified is-full-width">
-            <p>We apply the ResFiT method to real-world tasks and demonstrate the first successful real-world RL
+            <p>We apply the ResFiT method to real-world tasks and demonstrate, to our knowledge, the first successful
+              real-world RL
               training on a humanoid robot with dexterous hands.
             </p>
           </div>
