Shift the wollyball videos to the right to center the action

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           <!-- Row 1 -->
           <div class="column is-6">
             <h4 class="title is-5">Base Policy</h4>
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-0-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -457,7 +457,7 @@
           </div>
           <div class="column is-6">
             <h4 class="title is-5">Residual Policy</h4>
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-0-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -467,7 +467,7 @@
 
           <!-- Row 2 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-1-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -475,7 +475,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-1-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -485,7 +485,7 @@
 
           <!-- Row 3 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-2-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -493,7 +493,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-2-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -503,7 +503,7 @@
 
           <!-- Row 4 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-3-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -511,7 +511,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-3-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -521,7 +521,7 @@
 
           <!-- Row 5 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-4-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -529,7 +529,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-4-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -539,7 +539,7 @@
 
           <!-- Row 6 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-5-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -547,7 +547,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-5-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -557,7 +557,7 @@
 
           <!-- Row 7 -->
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-6-base.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -565,7 +565,7 @@
             </div>
           </div>
           <div class="column is-6">
-            <div class="video-container-4-3">
+            <div class="video-container-4-3 shift-right">
               <video autoplay loop muted loading="lazy" preload="none">
                 <source src="static/videos/woolly_ball/woollyball-bc-fail-rl-success-6-rl.mp4" type="video/mp4">
                 Your browser does not support the video tag.
